<resources>
    <string name="app_name">guoChat</string>


    <string name="add_group_chat">发起群聊</string>
    <string name="scan">扫一扫</string>
    <string name="add_contract">添加朋友</string>
    <string name="contract_id_card">朋友名片</string>
    <string name="press_voice">按住说话</string>
    <string name="send_text">发送</string>
    <string name="release_finger_send">松开手指即可发送语音</string>
    <string name="move_up_cancel">手指向上滑取消</string>
    <string name="album">相册</string>
    <string name="flash_light">闪光灯</string>
    <string name="calling_card">名片</string>
    <string name="calling_card_qr">二维码名片</string>
    <string name="capture">拍摄</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="change_pwd_login">切换为密码登录</string>
    <string name="click_fingerprint_login">点击进行密码登录</string>
    <string name="register">注册</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="search_phone_id">果聊号/手机号</string>
    <string name="my_chat_id">我的果聊号:</string>
    <string name="scan_qr_calling_card">扫描二维码名片</string>
    <string name="finish">完成</string>
    <string name="avatar">头像</string>
    <string name="personal_info">个人信息</string>
    <string name="nick_name">昵称</string>
    <string name="guo_chat_no">果聊号</string>
    <string name="select_from_album">从手机相册选择</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="settings">设置</string>
    <string name="about_app">关于果聊</string>
    <string name="message_settings">消息提醒</string>
    <string name="logout">退出</string>
    <string name="project_url">项目网址</string>
    <string name="brief_introduction">简介</string>
    <string name="brief_introduction_content">这是一个练手的仿微信UI的聊天APP，项目架构是MVVM+Kotlin。该项目聊天模块会实现文字、语音、图片以及小视频</string>
    <string name="calling_card_qr_note">扫一扫上面的二维码图案，加我果聊</string>
    <string name="contract_permission">朋友权限</string>
    <string name="guo_chat_circle">果聊圈</string>
    <string name="send_message">发送消息</string>
    <string name="gender_column">性别: </string>
    <string name="setting_remarks">设置备注</string>
    <string name="remarks_name">备注名</string>
    <string name="submit">发表</string>
    <string name="current_ideas">这一刻想法</string>

    <string name="please_check_fingerprint">请验证指纹</string>
    <string name="please_try_again">请再试一次</string>
    <string name="fingerprint_login">指纹登陆</string>


    <string name="open_eye_function">开眼</string>
    <string name="choiceness">精选</string>
    <string name="input_keywords_tips">请输入搜索关键字</string>
    <string name="search_own">搜索视频、作者、用户及标签</string>
    <string name="currently_not_supported">该功能即将开放，敬请期待</string>
    <string name="hot_keywords">热搜关键词</string>
    <string name="private_letter">私信</string>
    <string name="plus_follow">+关注</string>
    <string name="favorites">收藏</string>
    <string name="photo_count">%1$d/%2$d</string>


    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>


    <string name="save_video_too_short">视频太短啦！</string>
    <string name="save_video_success">保存视频成功！</string>
    <string name="save_photo_success">保存照片成功！</string>

    <string name="transition_photo" translatable="false">transition_photo</string>
</resources>
