<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkgrey"
    tools:context=".ui.settings.SettingsActivity">

    <com.benyq.guochat.ui.common.widget.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_title="@string/settings"/>

    <com.benyq.guochat.ui.common.widget.IconFormLine
        android:id="@+id/ifMessageSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:form_title="@string/message_settings" />

    <com.benyq.guochat.ui.common.widget.SwitchFormLine
        android:id="@+id/sfFingerprintLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:sf_form_title="@string/fingerprint_login"/>

    <com.benyq.guochat.ui.common.widget.IconFormLine
        android:id="@+id/ifAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:form_title="@string/about_app"/>

    <View style="@style/string_horizontal_divider"/>

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/logout"
        android:textColor="@color/color_2a2a2a"/>

</LinearLayout>