<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    android:orientation="vertical"
    tools:context=".ui.contracts.ContractNickActivity">

    <com.benyq.module_base.ui.widget.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_menu_btn_show="true"
        app:toolbar_menu_text="@string/finish"
        app:toolbar_title="@string/setting_remarks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"
        android:text="@string/remarks_name"
        android:textColor="@color/gray"/>

    <EditText
        android:id="@+id/etRemarksName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/white"/>

</LinearLayout>