<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    tools:context=".ui.contracts.AddContractActivity">

    <com.benyq.guochat.ui.common.widget.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_title="@string/add_contract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/llQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/shape_bg_round_white"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_phone_id"
            android:textSize="12sp"
            android:textColor="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llChatIdCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/llQuery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvGuoChatId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/my_chat_id"
            android:textSize="12sp"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_qr_code" />

    </LinearLayout>

    <com.benyq.guochat.ui.common.widget.IconFormLine
        android:id="@+id/ilScanCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:form_icon="@drawable/ic_add_contract"
        app:form_icon_bg="@drawable/shape_bg_round_green"
        app:form_title="@string/scan"
        app:form_content="@string/scan_qr_calling_card"
        app:layout_constraintTop_toBottomOf="@id/llChatIdCode"
        app:line_show_divide="false"
        android:layout_marginTop="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>