<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.me.PersonalInfoActivity">

    <com.benyq.module_base.ui.widget.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_title="@string/personal_info" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/avatar"
            android:textColor="@color/color3C4044"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivLineArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_arrow_right_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivLineArrow" />

        <View
            style="@style/thin_horizontal_divider"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.benyq.module_base.ui.widget.IconFormLine
        android:id="@+id/ifNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:form_title="@string/nick_name"/>


    <com.benyq.module_base.ui.widget.IconFormLine
        android:id="@+id/ifChatNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:form_title="@string/guo_chat_no"
        app:line_show_arrow="false" />

    <com.benyq.module_base.ui.widget.IconFormLine
        android:id="@+id/ifCallCardQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:form_title="@string/calling_card_qr"/>
</LinearLayout>