<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.discover.DiscoverFragment">

    <com.benyq.mvvm.ui.widget.IconFormLine
        android:id="@+id/ifFriendCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:line_show_divide="false"
        app:form_title="@string/guo_chat_circle"
        app:form_icon="@drawable/ic_friend_circle"/>

    <View style="@style/string_horizontal_divider"/>

    <com.benyq.mvvm.ui.widget.IconFormLine
        android:id="@+id/ifScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:line_show_divide="false"
        app:form_title="@string/scan"
        app:form_icon="@drawable/ic_discover_scan"/>

    <View style="@style/string_horizontal_divider"/>

    <com.benyq.mvvm.ui.widget.IconFormLine
        android:id="@+id/ifOpenEye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:line_show_divide="false"
        app:form_title="@string/open_eye_function"
        app:form_icon="@drawable/ic_open_eye"/>

    <View style="@style/string_horizontal_divider"/>

    <com.benyq.mvvm.ui.widget.IconFormLine
        android:id="@+id/ifComic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:line_show_divide="false"
        app:form_title="@string/comic_comic"
        app:form_icon="@drawable/comic_ic_comic"/>

    <View style="@style/string_horizontal_divider"/>

</LinearLayout>