<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_pop_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llAddGroupChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/selector_pop_item"
        android:padding="15dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_add_group_chat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/add_group_chat"/>

    </LinearLayout>

    <View style="@style/thin_horizontal_divider"/>

    <LinearLayout
        android:id="@+id/llAddContract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_pop_item"
        android:padding="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_add_contract"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/add_contract"/>

    </LinearLayout>

    <View style="@style/thin_horizontal_divider"/>

    <LinearLayout
        android:id="@+id/llScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_pop_item"
        android:padding="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_scan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/scan"/>

    </LinearLayout>

</LinearLayout>