<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.login.FingerLoginActivity">

    <com.benyq.guochat.ui.common.widget.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbar_back_icon="@drawable/ic_toolbar_close"
        app:toolbar_title="@string/login"/>

    <ImageView
        android:id="@+id/ivAvatarFinger"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_avatar"/>

    <TextView
        android:id="@+id/tvUserAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/color3C4044"
        android:textSize="16sp"
        android:gravity="center"
        tools:text="158****9939"
        app:layout_constraintTop_toBottomOf="@id/ivAvatarFinger"/>

    <LinearLayout
        android:id="@+id/llFingerPrintLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/ivFingerprint"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_fingerprint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/color3C4044"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/click_fingerprint_login"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tvSwitchLoginPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/color3C4044"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/change_pwd_login"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>